# maestro

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
.claude/skills/maestro-advisor/: SKILL.md  reference.md  taskspec-example.json
contrib/searxng/: README.md  docker-compose.yml  settings.yml
crates/maestro-cli/: Cargo.toml
crates/maestro-cli/src/: advise.rs  client.rs  daemon.rs  init.rs  main.rs  progress.rs
crates/maestro-cli/tests/: advise_readonly.rs
crates/maestro-daemon/: Cargo.toml
crates/maestro-daemon/src/: credentials.rs  delegate.rs  gate.rs  lib.rs  main.rs  model_auth.rs  resolve.rs  shim.rs  startup.rs  verify_checkout.rs  worktree.rs
crates/maestro-daemon/tests/: budget.rs  containment.rs  delegate.rs  driven.rs  driven_verifier.rs  escalation_salvage.rs  fix_in_place.rs  fix_in_place_durability.rs  gate_artifact.rs  merge.rs  proxy_budget.rs  server.rs  stall_recovery.rs  startup_reconcile.rs  verify_escalation.rs  watch.rs
crates/maestro-driver/: Cargo.toml
crates/maestro-driver/src/: checker.rs  claude.rs  lib.rs  pty.rs  session.rs
crates/maestro-driver/tests/: claude.rs  driven.rs
crates/maestro-implementer/: Cargo.toml
crates/maestro-implementer/src/: anthropic.rs  lib.rs  mock.rs  verifier.rs
crates/maestro-journal/: Cargo.toml
crates/maestro-journal/src/: config.rs  domain.rs  error.rs  lib.rs  paths.rs  progress.rs  proto.rs  report.rs  schema.rs  spec.rs
crates/maestro-journal/tests/: journal.rs
crates/maestro-mcp/: Cargo.toml
crates/maestro-mcp/src/: lib.rs  main.rs  server.rs  transport.rs
crates/maestro-mcp/tests/: server.rs
crates/maestro-proxy/: Cargo.toml
crates/maestro-proxy/src/: ledger.rs  lib.rs
crates/maestro-proxy/tests/: proxy.rs
crates/maestro-sandbox/: Cargo.toml
crates/maestro-sandbox/src/: lib.rs
crates/maestro-shim/: Cargo.toml
crates/maestro-shim/src/: error.rs  extraction.rs  fetch.rs  html.rs  lib.rs  search.rs  validation.rs
docs/: OPERATING_LESSONS.md  PLAN.md
docs/adr/: 001-journal-event-sourcing-and-failure-taxonomy.md  002-verification-contract.md  003-delegation-tiers-and-escalation.md  004-containment-levels.md  005-search-shim-contract.md  006-daemon-transport-and-control.md  007-config-and-profiles.md  008-implementer-backends-and-cost-routing.md  009-progress-tracking.md
