[package]
name = "maestro-daemon"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "maestro_daemon"
path = "src/lib.rs"

[[bin]]
name = "maestro-daemon"
path = "src/main.rs"

[dependencies]
maestro-journal.workspace = true
maestro-sandbox.workspace = true
maestro-implementer.workspace = true
maestro-driver = { path = "../maestro-driver" }
maestro-shim = { path = "../maestro-shim" }
sha2 = "0.10"
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
time.workspace = true
tokio.workspace = true
rustix.workspace = true
tempfile = "3"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
