[package]
name = "maestro-driver"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
maestro-journal.workspace = true
portable-pty.workspace = true
rustix = { workspace = true, features = ["fs", "process"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
