[package]
name = "maestro-journal"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
ulid.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
