[package]
name = "maestro-mcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "maestro-mcp"
path = "src/main.rs"

[lib]
name = "maestro_mcp"
path = "src/lib.rs"

[dependencies]
maestro-journal.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rustix.workspace = true

[dev-dependencies]
tempfile = "3"
