[package]
name = "maestro-shim"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
scraper = "0.20"
sha2 = "0.10"

[dev-dependencies]
